inclusao dos icones da page galeria e criado sessao depoimento

--- a/css/components/main.css
+++ b/css/components/main.css
@@ -30,6 +30,7 @@
 /* 6. Sections restantes - Organizados */
 /* @import 'services.css'; */
 @import 'gallery.css';
+@import 'testimonials.css';
 /* @import 'courses.css'; */
 /* @import 'contact.css'; */
 /* @import 'footer.css'; */
