adicão de fotos jiujitsu, bombeiros e educaçao

--- a/css/components/main.css
+++ b/css/components/main.css
@@ -22,6 +22,7 @@
 
 /* 5. Components - Organizados */
 @import 'buttons.css';
+@import 'chatbot.css';
 /* @import 'cards.css'; */
 /* @import 'forms.css'; */
 /* @import 'modals.css'; */
