--- a/css/components/remaining-temp.css
+++ b/css/components/remaining-temp.css
@@ -1000,7 +1000,8 @@ footer p:last-child {
 .skip-nav {
   position: absolute;
   top: -40px;
-  left: 6px;
+  left: 50%;
+  transform: translateX(-50%);
   background: #000;
   color: white;
   padding: 8px;
@@ -1515,7 +1516,8 @@ footer p:last-child {
 .skip-nav {
   position: absolute;
   top: -40px;
-  left: 6px;
+  left: 50%;
+  transform: translateX(-50%);
   background: #000;
   color: white;
   padding: 8px;
